Style-CottageDescription: Improve html structure; Add margins to the card to avoid clustering to the borders on mobile devices

--- a/src/components/CottageDescription/CottageDescription.css
+++ b/src/components/CottageDescription/CottageDescription.css
@@ -1,8 +1,22 @@
 .cottage-description {
-	border-radius: var(--border-radius-value);
+	display: flex;
+	justify-content: center;
 	text-align: left;
-	padding: 20px;
-	padding-left: 50px;
-	width: fit-content;
-	margin: 16px auto;
+
+	.cottage-description-card {
+		border-radius: var(--border-radius-value);
+		width: fit-content;
+		padding: 20px;
+		padding-left: 50px;
+		margin: 16px;
+	}
+}
+
+@media (min-width: 1024px) {
+	.cottage-description {
+		.cottage-description-card {
+			padding: 40px;
+			padding-left: 50px;
+		}
+	}
 }
